--- a/family.html
+++ b/family.html
@@ -29,7 +29,7 @@
 			<img src = "images/badlands.jpg" width="1000" alt = "Ben Reifel Visitor Center sign with kids">
 			<img src = "images/falling.jpg" width="25" alt = "falling image">
 			<img src = "images/rushmore.jpg" width="1000" alt = "Mount Rushmore with tree">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "Jewel Cave National Monument sign with kids">
+			<img src = "images/jewel_cave.JPG" width="25" alt = "Jewel Cave National Monument sign with kids">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 	<footer>
